SMAR-27095 - Full Bleed Image - PR review comment fixed

--- a/tetrapak-customerhub/ui.dev/src/source/templates/components/fullbleedimage/_fullbleedimage.scss
+++ b/tetrapak-customerhub/ui.dev/src/source/templates/components/fullbleedimage/_fullbleedimage.scss
@@ -2,7 +2,7 @@
     max-width: 100%;
     .pw-padding {
         &--zero {
-            @include padding($padding-zero $padding-xxxl);
+            @include padding($padding-zero $padding-l);
             @include margin($margin-zero);
         }
     }
@@ -31,14 +31,11 @@
 
         @media #{$desktop} {
             @include max-width($body-max-width);
-            @include padding($padding-zero $padding-xxxl);
+            @include padding($padding-zero $padding-l);
             margin: $margin-zero auto;
     }
     }
     img {
-        width: 100%;
+        max-width: 100%;
     }
 }
-// .regular {
-//     @include padding(16px 16px 24px 16px);
-// }
