--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/image/_image.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/image/_image.scss
@@ -10,7 +10,6 @@
         margin: 0 auto;
         padding-left: 0;
         padding-right: 0;
-        text-align: center;
     }
     &__regular {
         @include padding(0);
